--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "Apache-2.0",
   "author": "@isachadev",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
